<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        />
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <EditText
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:id="@+id/username"
            android:padding="15dp"
            android:textSize="18sp"
            android:background="@drawable/outline"
            android:inputType="textPersonName" />
        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:id="@+id/fullName"
            android:padding="15dp"
            android:textSize="18sp"
            android:background="@drawable/outline"
            android:inputType="textPersonName" />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/email"
            android:padding="15dp"
            android:textSize="18sp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/outline"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:padding="15dp"
            android:textSize="18sp"
            android:background="@drawable/outline"
            android:inputType="textPassword" />

        <CheckBox
            android:layout_marginTop="20dp"
            android:id="@+id/checkbox_terms_and_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agree_with_terms_and_conditions"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/yellow" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/outline"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        />
    </LinearLayout>



</LinearLayout>